Fixed overflow on feelings result

--- a/teacher/src/components/FeelingsResults.css
+++ b/teacher/src/components/FeelingsResults.css
@@ -1,3 +1,4 @@
+.diagramBodyFeelingsWrapper { width: 100%; overflow: auto; }
 .diagramBodyFeelings { display: table; height: calc(100vh - 450px); width: 100%; margin: 120px 0 50px 0; }
 .diagramBodyFeelings > div { display: table-row; }
 .diagramBodyFeelings > div > div { display: table-cell; vertical-align: bottom; padding: 0 10px 0 10px; height: 100%;}
